+ [ws-training-server-as] - new WS ancester added (AbstractSoapWebService) + REST service was removed (not working any more) + new calculator WS }from API] + [ws-training-client] - just SoapUI project

--- a/ws-training-server-as/pom.xml
+++ b/ws-training-server-as/pom.xml
@@ -22,11 +22,11 @@
 
 	<dependencies>
 		<!-- WS-Training -->
-		<!-- dependency>
+		<dependency>
 			<groupId>com.asseco.aha.training.ws</groupId>
 			<artifactId>ws-server-api</artifactId>
 			<version>${ws-training-api.version}</version>
-		</dependency-->
+		</dependency>
 	
 		<!-- Spring -->
 		<dependency>
