+ [ws-training-server-se] modifications for Tomcat

--- a/ws-training-server-se/src/main/resources/log4j.properties
+++ b/ws-training-server-se/src/main/resources/log4j.properties
@@ -1,4 +1,4 @@
-log4j.rootLogger=DEBUG, FILE, CONSOLE
+log4j.rootLogger=DEBUG, CONSOLE
 
 # A1 is set to be a ConsoleAppender.
 log4j.appender.CONSOLE=org.apache.log4j.ConsoleAppender
@@ -13,10 +13,10 @@ log4j.appender.FILE.encoding=UTF-8
 log4j.appender.FILE.layout=org.apache.log4j.PatternLayout
 log4j.appender.FILE.layout.ConversionPattern=%d{DATE} [%t] %-5p %-15c{1} : %m%n
 
-log4j.logger.com.asseco.aha.training=ALL, FILE
+log4j.logger.com.asseco.aha.training=ALL, FILE, CONSOLE
 
 # log4j.logger.org.hibernate.hql=INFO, FILE
-# log4j.logger.org.springframework.test=INFO
+log4j.logger.org.springframework=DEBUG, FILE, CONSOLE
 
 # pro kratky vypis v console
 # log4j.logger.org.springframework.test=INFO
