--- a/ws-training-server-se/pom.xml
+++ b/ws-training-server-se/pom.xml
@@ -79,6 +79,12 @@
 			<type>pom</type>
 			<scope>provided</scope>
 		</dependency>
+		<dependency>
+			<groupId>com.sun.xml.ws</groupId>
+			<artifactId>jaxws-rt</artifactId>
+			<version>2.2.8</version>
+			<scope>provided</scope>
+		</dependency>
 		
 	</dependencies>
 
