--- a/ws-training-server-as/pom.xml
+++ b/ws-training-server-as/pom.xml
@@ -6,7 +6,7 @@
 	<parent>
 		<groupId>com.asseco.aha.training.ws</groupId>
 		<artifactId>ws-parent</artifactId>
-		<version>0.0.1-SNAPSHOT</version>
+		<version>0.0.2-SNAPSHOT</version>
 	</parent>
 
 	<artifactId>ws-server-as</artifactId>
@@ -17,14 +17,14 @@
 
 	<properties>
 		<!-- WS-Training -->
-		<ws-training-api.version>0.0.1-SNAPSHOT</ws-training-api.version>
+		<ws-training-api.version>0.0.2-SNAPSHOT</ws-training-api.version>
 	</properties>
 
 	<dependencies>
 		<!-- WS-Training -->
 		<dependency>
 			<groupId>com.asseco.aha.training.ws</groupId>
-			<artifactId>ws-server-api</artifactId>
+			<artifactId>ws-training-api</artifactId>
 			<version>${ws-training-api.version}</version>
 		</dependency>
 	
