--- a/ws-training-root/pom.xml
+++ b/ws-training-root/pom.xml
@@ -2,8 +2,8 @@
 	<modelVersion>4.0.0</modelVersion>
 
 	<groupId>com.asseco.aha.training.ws</groupId>
-	<artifactId>ws-training</artifactId>
-	<version>0.0.2-SNAPSHOT</version>
+	<artifactId>ws-parent</artifactId>
+	<version>0.0.3-SNAPSHOT</version>
 	<packaging>pom</packaging>
 
 	<name>WS-Training :: ${project.artifactId}</name>
@@ -11,10 +11,21 @@
 
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-		<project.source.version>1.7</project.source.version>
-		<spring.version>4.1.2.RELEASE</spring.version>
-		<slf4j.version>1.7.7</slf4j.version>
+		
+		<!-- compiler properties -->
+		<java.release>10</java.release>
+		<maven.compiler.plugin.version>3.8.0</maven.compiler.plugin.version>
+		<maven.compiler.source>${java.release}</maven.compiler.source>
+		<maven.compiler.target>${java.release}</maven.compiler.target>
+		
+		<spring.version>5.1.2.RELEASE</spring.version>
+		<cxf.version>3.0.2</cxf.version>
+		
+		<slf4j.version>1.7.25</slf4j.version>
 		<log4j.version>1.2.17</log4j.version>
+		<logback.version>1.2.3</logback.version>
+		<java-ee.version>1.1.1.Final</java-ee.version>
+		<jaxb.version>2.3.1</jaxb.version>
 	</properties>
 
 	<dependencyManagement>
@@ -59,29 +70,44 @@
 				<version>${slf4j.version}</version>
 			</dependency>
 			<dependency>
-				<groupId>log4j</groupId>
-				<artifactId>log4j</artifactId>
-				<version>${log4j.version}</version>
-			</dependency>
-			<dependency>
+				<!-- required by Spring -->
 				<groupId>org.slf4j</groupId>
 				<artifactId>jcl-over-slf4j</artifactId>
 				<version>${slf4j.version}</version>
+			</dependency>		
+			<dependency>
+				<groupId>ch.qos.logback</groupId>
+				<artifactId>logback-classic</artifactId>
+				<version>${logback.version}</version>
 			</dependency>
 			<dependency>
-				<groupId>org.slf4j</groupId>
-				<artifactId>slf4j-log4j12</artifactId>
-				<version>${slf4j.version}</version>
+				<groupId>ch.qos.logback</groupId>
+				<artifactId>logback-core</artifactId>
+				<version>${logback.version}</version>
 			</dependency>
 			
+			<!-- JAX-B for JDK9+ -->
+			<dependency>
+				<groupId>org.glassfish.jaxb</groupId>
+				<artifactId>jaxb-runtime</artifactId>
+				<version>${jaxb.version}</version>
+			</dependency>
 			<!-- JavaEE -->
 			<dependency>
-				<groupId>org.jboss.spec</groupId>
-				<artifactId>jboss-javaee-6.0</artifactId>
-				<version>3.0.2.Final</version>
-				<type>pom</type>
-				<scope>provided</scope>
+			    <groupId>org.jboss.spec</groupId>
+			    <artifactId>jboss-javaee-7.0</artifactId>
+			    <version>${java-ee.version}</version>
+			    <type>pom</type>
+			    <scope>provided</scope>
 			</dependency>
+
+			<!-- Others -->
+			<dependency>
+				<groupId>de.sven-jacobs</groupId>
+				<artifactId>loremipsum</artifactId>
+				<version>1.0</version>
+			</dependency>
+			
 		</dependencies>
 	</dependencyManagement>
 	
