--- a/ws-training-server-jaxws/pom.xml
+++ b/ws-training-server-jaxws/pom.xml
@@ -6,7 +6,8 @@
 	<parent>
 		<groupId>com.asseco.aha.training.ws</groupId>
 		<artifactId>ws-parent</artifactId>
-		<version>0.0.2-SNAPSHOT</version>
+		<version>0.0.3-SNAPSHOT</version>
+		<relativePath>../ws-training-root</relativePath>
 	</parent>
 
 	<artifactId>ws-server-jaxws</artifactId>
@@ -15,17 +16,12 @@
 	<name>WS-Training :: ${project.artifactId}</name>
 	<description>Implementation of WS server side (JAX-WS)</description>
 
-	<properties>
-		<!-- WS-Training -->
-		<ws-training-api.version>0.0.2-SNAPSHOT</ws-training-api.version>
-	</properties>
-
 	<dependencies>
 		<!-- WS-Training -->
 		<dependency>
 			<groupId>com.asseco.aha.training.ws</groupId>
-			<artifactId>ws-training-api</artifactId>
-			<version>${ws-training-api.version}</version>
+			<artifactId>ws-api</artifactId>
+			<version>${project.version}</version>
 		</dependency>
 	
 		<!-- Spring -->
@@ -60,22 +56,14 @@
 			<artifactId>slf4j-api</artifactId>
 		</dependency>
 		<dependency>
-			<groupId>log4j</groupId>
-			<artifactId>log4j</artifactId>
-		</dependency>
-		<dependency>
-			<groupId>org.slf4j</groupId>
-			<artifactId>jcl-over-slf4j</artifactId>
-		</dependency>
-		<dependency>
-			<groupId>org.slf4j</groupId>
-			<artifactId>slf4j-log4j12</artifactId>
+			<groupId>ch.qos.logback</groupId>
+			<artifactId>logback-classic</artifactId>
 		</dependency>
 		
 		<!-- JavaEE -->
 		<dependency>
 			<groupId>org.jboss.spec</groupId>
-			<artifactId>jboss-javaee-6.0</artifactId>
+			<artifactId>jboss-javaee-7.0</artifactId>
 			<type>pom</type>
 			<scope>provided</scope>
 		</dependency>
@@ -84,7 +72,6 @@
 		<dependency>
 			<groupId>de.sven-jacobs</groupId>
 			<artifactId>loremipsum</artifactId>
-			<version>1.0</version>
 		</dependency>
 	</dependencies>
 
@@ -93,37 +80,15 @@
 		
 		<plugins>
 			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-compiler-plugin</artifactId>
-				<version>3.1</version>
-				<configuration>
-					<source>1.7</source>
-					<target>1.7</target>
-				</configuration>
-			</plugin>
-			<plugin>
 				<groupId>org.wildfly.plugins</groupId>
 				<artifactId>wildfly-maven-plugin</artifactId>
-				<version>1.0.2.Final</version>
+				<version>1.2.1.Final</version>
 				<configuration>
-					<serverId>wildfly-as</serverId>
-					<hostname>localhost</hostname>
+					<id>wildfly-local</id>
+					<hostname>127.0.0.1</hostname>
+					<port>9990</port>
 				</configuration>
 			</plugin>
-
-			<plugin>
-				<groupId>org.jboss.as.plugins</groupId>
-				<artifactId>jboss-as-maven-plugin</artifactId>
-				<version>7.6.Final</version>
-				<configuration>
-					<hostname>localhost</hostname>
-					<serverId>jboss-as</serverId>
-					<fileNames>
-						<fileName>${basedir}/target/${project.artifactId}.war</fileName>
-					</fileNames>
-				</configuration>
-			</plugin>
-			
 		</plugins>
 	</build>
 
