- [POM] fix for correct parent folder

--- a/ws-training-client-jaxws/pom.xml
+++ b/ws-training-client-jaxws/pom.xml
@@ -7,7 +7,7 @@
 		<groupId>com.asseco.aha.training.ws</groupId>
 		<artifactId>ws-parent</artifactId>
 		<version>0.0.3-SNAPSHOT</version>
-		<relativePath>../ws-training-root</relativePath>
+		<relativePath>../ws-training-parent</relativePath>
 	</parent>
 
 	<artifactId>ws-client-jaxws</artifactId>
