--- a/ws-training-server-sb/pom.xml
+++ b/ws-training-server-sb/pom.xml
@@ -13,7 +13,7 @@
 		<groupId>com.asseco.aha.training.ws</groupId>
 		<artifactId>ws-parent</artifactId>
 		<version>0.0.3-SNAPSHOT</version>
-		<relativePath>../ws-training-root</relativePath>
+		<relativePath>../ws-training-parent</relativePath>
 	</parent>
 
 	<properties>
