--- a/ws-training-parent/pom.xml
+++ b/ws-training-parent/pom.xml
@@ -17,6 +17,7 @@
 		<maven.compiler.plugin.version>3.8.1</maven.compiler.plugin.version>
 		<maven.compiler.source>${java.release}</maven.compiler.source>
 		<maven.compiler.target>${java.release}</maven.compiler.target>
+		<jacoco.version>0.8.5</jacoco.version>
 		
 		<spring-boot.version>2.1.7.RELEASE</spring-boot.version>
 		<junit.jupiter.version>5.5.1</junit.jupiter.version>
