--- a/ws-training-server-cxf/pom.xml
+++ b/ws-training-server-cxf/pom.xml
@@ -66,7 +66,7 @@
 		<!-- JavaEE -->
 		<dependency>
 			<groupId>org.jboss.spec</groupId>
-			<artifactId>jboss-javaee-7.0</artifactId>
+			<artifactId>jboss-jakartaee-8.0</artifactId>
 			<type>pom</type>
 			<scope>provided</scope>
 		</dependency>
