--- a/ws-training-server-jaxws/pom.xml
+++ b/ws-training-server-jaxws/pom.xml
@@ -53,7 +53,7 @@
 		<!-- JavaEE -->
 		<dependency>
 			<groupId>org.jboss.spec</groupId>
-			<artifactId>jboss-javaee-7.0</artifactId>
+		    <artifactId>jboss-jakartaee-8.0</artifactId>
 			<type>pom</type>
 			<scope>provided</scope>
 		</dependency>
