--- a/ws-training-parent/pom.xml
+++ b/ws-training-parent/pom.xml
@@ -3,7 +3,7 @@
 
 	<groupId>com.asseco.aha.training.ws</groupId>
 	<artifactId>ws-parent</artifactId>
-	<version>0.1.0-SNAPSHOT</version>
+	<version>0.2.0-SNAPSHOT</version>
 	<packaging>pom</packaging>
 
 	<name>WS-Training :: ${project.artifactId}</name>
@@ -13,16 +13,16 @@
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		
 		<!-- compiler properties -->
-		<java.release>14</java.release>
+		<java.release>15</java.release>
 		<maven.compiler.plugin.version>3.8.1</maven.compiler.plugin.version>
 		<maven.compiler.source>${java.release}</maven.compiler.source>
 		<maven.compiler.target>${java.release}</maven.compiler.target>
-		<jacoco.version>0.8.5</jacoco.version>
+		<jacoco.version>0.8.6</jacoco.version>
 		<surefire-plugin>2.22.2</surefire-plugin>
 		
-		<spring-boot.version>2.3.3.RELEASE</spring-boot.version>
-		<junit.jupiter.version>5.6.2</junit.jupiter.version>
-		<cxf.version>3.3.7</cxf.version>
+		<spring-boot.version>2.4.0</spring-boot.version>
+		<junit.jupiter.version>5.7.0</junit.jupiter.version>
+		<cxf.version>3.4.1</cxf.version>
 		
 		<jaxb-runtime.version>2.3.3</jaxb-runtime.version>
 		<jaxb-core.version>2.3.0.1</jaxb-core.version>
