--- a/ws-training-parent/pom.xml
+++ b/ws-training-parent/pom.xml
@@ -1,4 +1,6 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0"
+	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 
 	<groupId>com.asseco.aha.training.ws</groupId>
@@ -11,24 +13,25 @@
 
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-		
+
 		<!-- compiler properties -->
 		<java.release>17</java.release>
 		<maven.compiler.source>${java.release}</maven.compiler.source>
 		<maven.compiler.target>${java.release}</maven.compiler.target>
+		<maven-war-plugin.version>3.3.2</maven-war-plugin.version>
 		<jacoco.version>0.8.7</jacoco.version>
 		<surefire-plugin>2.22.2</surefire-plugin>
-		
+
 		<spring-boot.version>2.6.1</spring-boot.version>
 		<junit.jupiter.version>5.8.2</junit.jupiter.version>
 		<cxf.version>3.4.5</cxf.version>
-		
+
 		<jaxb-runtime.version>3.0.2</jaxb-runtime.version>
 		<jaxb-core.version>3.0.2</jaxb-core.version>
 		<servlet-api.version>2.5</servlet-api.version>
 		<jaxws-rt.version>2.3.3</jaxws-rt.version>
 		<javax.mail.version>1.6.2</javax.mail.version>
-		
+
 		<wildlfy-maven-plugin.version>2.0.2.Final</wildlfy-maven-plugin.version>
 	</properties>
 
@@ -43,14 +46,14 @@
 				<scope>import</scope>
 			</dependency>
 			<!-- JUnit 5 -->
-	        <dependency>
-	            <groupId>org.junit</groupId>
-	            <artifactId>junit-bom</artifactId>
-	            <version>${junit.jupiter.version}</version>
-	            <type>pom</type>
-	            <scope>import</scope>
-	        </dependency>
-			
+			<dependency>
+				<groupId>org.junit</groupId>
+				<artifactId>junit-bom</artifactId>
+				<version>${junit.jupiter.version}</version>
+				<type>pom</type>
+				<scope>import</scope>
+			</dependency>
+
 			<!-- JAX-B for JDK9+ -->
 			<dependency>
 				<groupId>org.glassfish.jaxb</groupId>
@@ -59,29 +62,29 @@
 				<scope>provided</scope>
 			</dependency>
 			<dependency>
-			    <groupId>org.glassfish.jaxb</groupId>
-			    <artifactId>jaxb-core</artifactId>
-			    <version>${jaxb-core.version}</version>
-			    <scope>provided</scope>
+				<groupId>org.glassfish.jaxb</groupId>
+				<artifactId>jaxb-core</artifactId>
+				<version>${jaxb-core.version}</version>
+				<scope>provided</scope>
 			</dependency>
 			<!-- JakartaEE API -->
 			<dependency>
-			    <groupId>javax.servlet</groupId>
-			    <artifactId>servlet-api</artifactId>
-			    <version>${servlet-api.version}</version>
-			    <scope>provided</scope>
+				<groupId>javax.servlet</groupId>
+				<artifactId>servlet-api</artifactId>
+				<version>${servlet-api.version}</version>
+				<scope>provided</scope>
 			</dependency>
 			<dependency>
-			    <groupId>com.sun.xml.ws</groupId>
-			    <artifactId>jaxws-rt</artifactId>
-			    <version>${jaxws-rt.version}</version>
-			    <scope>provided</scope>
+				<groupId>com.sun.xml.ws</groupId>
+				<artifactId>jaxws-rt</artifactId>
+				<version>${jaxws-rt.version}</version>
+				<scope>provided</scope>
 			</dependency>
 			<dependency>
-			    <groupId>com.sun.mail</groupId>
-			    <artifactId>javax.mail</artifactId>
-			    <version>${javax.mail.version}</version>
-			    <scope>provided</scope>
+				<groupId>com.sun.mail</groupId>
+				<artifactId>javax.mail</artifactId>
+				<version>${javax.mail.version}</version>
+				<scope>provided</scope>
 			</dependency>
 
 			<!-- Others -->
@@ -90,10 +93,10 @@
 				<artifactId>loremipsum</artifactId>
 				<version>1.0</version>
 			</dependency>
-			
+
 		</dependencies>
 	</dependencyManagement>
-	
+
 	<build>
 		<pluginManagement>
 			<plugins>
@@ -105,11 +108,11 @@
 				<plugin>
 					<groupId>org.apache.maven.plugins</groupId>
 					<artifactId>maven-compiler-plugin</artifactId>
-		            <configuration>
-		                <source>${java.release}</source>
-		                <target>${java.release}</target>
-		                <forceJavacCompilerUse>true</forceJavacCompilerUse>
-		            </configuration>
+					<configuration>
+						<source>${java.release}</source>
+						<target>${java.release}</target>
+						<forceJavacCompilerUse>true</forceJavacCompilerUse>
+					</configuration>
 				</plugin>
 				<plugin>
 					<groupId>org.wildfly.plugins</groupId>
@@ -124,13 +127,13 @@
 			</plugins>
 		</pluginManagement>
 	</build>
-	
+
 	<dependencies>
 		<dependency>
 			<groupId>org.projectlombok</groupId>
 			<artifactId>lombok</artifactId>
 			<scope>provided</scope>
-		</dependency>	
+		</dependency>
 	</dependencies>
 
 	<profiles>
@@ -161,5 +164,5 @@
 			</build>
 		</profile>
 	</profiles>
-    
+
 </project>
