--- a/ws-training-parent/pom.xml
+++ b/ws-training-parent/pom.xml
@@ -102,8 +102,8 @@
 			<plugins>
 				<plugin>
 					<groupId>org.apache.maven.plugins</groupId>
-					<artifactId>maven-surefire-plugin</artifactId>
-					<version>${surefire-plugin}</version>
+					<artifactId>maven-war-plugin</artifactId>
+					<version>${maven-war-plugin.version}</version>
 				</plugin>
 				<plugin>
 					<groupId>org.apache.maven.plugins</groupId>
@@ -113,6 +113,11 @@
 						<target>${java.release}</target>
 						<forceJavacCompilerUse>true</forceJavacCompilerUse>
 					</configuration>
+				</plugin>
+				<plugin>
+					<groupId>org.apache.maven.plugins</groupId>
+					<artifactId>maven-surefire-plugin</artifactId>
+					<version>${surefire-plugin}</version>
 				</plugin>
 				<plugin>
 					<groupId>org.wildfly.plugins</groupId>
